# MacedoApi

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  app.py  main.py  route.py
