[tool.poetry]
name = "macedoapi"
version = "0.1.0"
description = ""
authors = ["phmacedo <macedopham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
httpx = "^0.17.1"
blueprint = "^3.4.2"
flasgger = "^0.9.5"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
